# lab05

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml  hello_world.cpp
.github/workflows/: linux.yml
banking/: CMakeLists.txt
banking/include/banking/: Account.hpp  Transaction.hpp
banking/src/: Account.cpp  Transaction.cpp
homework/: CMakeLists.txt
homework/hello_world_application/: hello_world.cpp
homework/solver_lib/: solver.cpp
tests/banking/: test_account.cpp  test_transaction.cpp  test_transaction_mock.cpp
tests/mocks/: MockAccount.hpp
